<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_activity_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/animations"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/font_medium"
        android:text="@string/intro_text" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rvWeeklySteps"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical"
        android:visibility="gone">

    </android.support.v7.widget.RecyclerView>

    <ToggleButton
        android:id="@+id/toggleOrderButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:onClick="onToggleClicked"
        android:textOff="@string/reverse_chronological"
        android:textOn="@string/chronological"
        android:visibility="gone">

    </ToggleButton>
</RelativeLayout>