<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_extra_small"
        card_view:cardCornerRadius="@dimen/cardCornerRad"
        android:id="@+id/cardView">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="@dimen/margin_extra_large"
                android:layout_gravity="center"
                android:contentDescription="@string/icon_desc"
                android:src="@drawable/img_walk"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:id="@+id/imgWalk"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/font_small"
                android:layout_margin="@dimen/margin_medium"
                android:layout_gravity="center"
                android:id="@+id/tvDate"
                android:layout_toEndOf="@+id/imgWalk"
                android:layout_centerVertical="true"
                android:text="@string/place_holder"/>

            <TextView
                android:id="@+id/tvSteps"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/font_small"
                android:layout_margin="@dimen/margin_medium"
                android:layout_gravity="center"
                android:layout_toEndOf="@+id/tvDate"
                android:layout_centerVertical="true"
                android:text="@string/zero_steps"/>

        </RelativeLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>